results/scraper/launchpad/1571084
Qemu 2.x dont build on last Gtk dev 3.0+

here the build exit

ui/gtk.c: In function ‘gd_mouse_set’:
ui/gtk.c:479:5: error: ‘gdk_display_get_device_manager’ is deprecated: Use 'gdk_display_get_default_seat' instead [-Werror=deprecated-declarations]
     mgr = gdk_display_get_device_manager(dpy);
     ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdisplay.h:170:20: note: declared here
 GdkDeviceManager * gdk_display_get_device_manager (GdkDisplay *display);
                    ^
ui/gtk.c:482:5: error: ‘gdk_device_manager_get_client_pointer’ is deprecated [-Werror=deprecated-declarations]
     gdk_device_warp(gdk_device_manager_get_client_pointer(mgr),
     ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkdisplay.h:32:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdevicemanager.h:44:14: note: declared here
 GdkDevice *  gdk_device_manager_get_client_pointer (GdkDeviceManager *device_manager);
              ^
ui/gtk.c: In function ‘gd_grab_devices’:
ui/gtk.c:1316:5: error: ‘gdk_display_get_device_manager’ is deprecated: Use 'gdk_display_get_default_seat' instead [-Werror=deprecated-declarations]
     GdkDeviceManager *mgr = gdk_display_get_device_manager(display);
     ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdisplay.h:170:20: note: declared here
 GdkDeviceManager * gdk_display_get_device_manager (GdkDisplay *display);
                    ^
ui/gtk.c:1317:5: error: ‘gdk_device_manager_list_devices’ is deprecated [-Werror=deprecated-declarations]
     GList *devs = gdk_device_manager_list_devices(mgr, GDK_DEVICE_TYPE_MASTER);
     ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkdisplay.h:32:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdevicemanager.h:41:14: note: declared here
 GList *      gdk_device_manager_list_devices       (GdkDeviceManager *device_manager,
              ^
ui/gtk.c:1327:13: error: ‘gdk_device_grab’ is deprecated: Use 'gdk_seat_grab' instead [-Werror=deprecated-declarations]
             gdk_device_grab(dev, win, GDK_OWNERSHIP_NONE, FALSE,
             ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkdnd.h:33:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkevents.h:34,
                 from /usr/local/include/gtk-3.0/gdk/gdkdisplay.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdevice.h:250:15: note: declared here
 GdkGrabStatus gdk_device_grab        (GdkDevice        *device,
               ^
ui/gtk.c:1330:13: error: ‘gdk_device_ungrab’ is deprecated: Use 'gdk_seat_ungrab' instead [-Werror=deprecated-declarations]
             gdk_device_ungrab(dev, GDK_CURRENT_TIME);
             ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkdnd.h:33:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkevents.h:34,
                 from /usr/local/include/gtk-3.0/gdk/gdkdisplay.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdevice.h:259:15: note: declared here
 void          gdk_device_ungrab      (GdkDevice        *device,
               ^
ui/gtk.c: In function ‘gd_grab_pointer’:
ui/gtk.c:1392:5: error: ‘gdk_display_get_device_manager’ is deprecated: Use 'gdk_display_get_default_seat' instead [-Werror=deprecated-declarations]
     GdkDeviceManager *mgr = gdk_display_get_device_manager(display);
     ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdisplay.h:170:20: note: declared here
 GdkDeviceManager * gdk_display_get_device_manager (GdkDisplay *display);
                    ^
ui/gtk.c:1400:5: error: ‘gdk_device_manager_get_client_pointer’ is deprecated [-Werror=deprecated-declarations]
     gdk_device_get_position(gdk_device_manager_get_client_pointer(mgr),
     ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkdisplay.h:32:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdevicemanager.h:44:14: note: declared here
 GdkDevice *  gdk_device_manager_get_client_pointer (GdkDeviceManager *device_manager);
              ^
ui/gtk.c: In function ‘gd_ungrab_pointer’:
ui/gtk.c:1432:5: error: ‘gdk_display_get_device_manager’ is deprecated: Use 'gdk_display_get_default_seat' instead [-Werror=deprecated-declarations]
     GdkDeviceManager *mgr = gdk_display_get_device_manager(display);
     ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdisplay.h:170:20: note: declared here
 GdkDeviceManager * gdk_display_get_device_manager (GdkDisplay *display);
                    ^
ui/gtk.c:1434:5: error: ‘gdk_device_manager_get_client_pointer’ is deprecated [-Werror=deprecated-declarations]
     gdk_device_warp(gdk_device_manager_get_client_pointer(mgr),
     ^
In file included from /usr/local/include/gtk-3.0/gdk/gdkdisplay.h:32:0,
                 from /usr/local/include/gtk-3.0/gdk/gdkscreen.h:32,
                 from /usr/local/include/gtk-3.0/gdk/gdkapplaunchcontext.h:31,
                 from /usr/local/include/gtk-3.0/gdk/gdk.h:32,
                 from /usr/local/include/gtk-3.0/gtk/gtk.h:30,
                 from /home/amigaone/src/qemu/include/ui/gtk.h:9,
                 from ui/gtk.c:42:
/usr/local/include/gtk-3.0/gdk/gdkdevicemanager.h:44:14: note: declared here
 GdkDevice *  gdk_device_manager_get_client_pointer (GdkDeviceManager *device_manager);
              ^

Thanks for the bug report. You can avoid this being a compilation failure by passing configure the option "--disable-werror". (This is the default for releases, so you only need it for building QEMU from git (a build from a release tarball or a release candidate tarball should be fine).


